<resources>
    <string name="app_name">My Application</string>
    <string name="btnDetailtext">Détails</string>
    <string name="btnCourtext">Cours</string>
    <string name="btnAPropostext">A Propos</string>
    <string name="btnQuittetext">Quitter</string>
    <string name="connexion">Connexion</string>
    <string name="connexionBtn">Connexion...</string>
    <string name="votre_nom">Votre nom</string>
    <string name="newActivityTitle">Informations</string>
    <string name="titleDetail">Détails</string>
    <string name="ok">ok</string>
    <string name="nom">test</string>
</resources>